# server/src/api/auth/auth.api.ts
@@ -1,5 +1,5 @@
 import { NextFunction, Request, Response } from 'express';
-import { googleSignIn, login, signup } from '../../lib/auth';
+import { googleSignInWithCode, login, signup } from '../../lib/auth';
 
 export async function handleSignup(req: Request, res: Response, next: NextFunction) {
   try {
@@ -28,8 +28,8 @@ export async function handleLogin(req: Request, res: Response, next: NextFunctio
 
 export async function handleGoogleSignIn(req: Request, res: Response, next: NextFunction) {
   try {
-    const { idToken } = req.body;
-    const { user, token } = await googleSignIn({ idToken });
+    const { code } = req.body;
+    const { user, token } = await googleSignInWithCode({ code });
     res.status(200).json({ user: user.jwtRepr(), token });
   } catch (err) {
     next(err);
